# Network-Programming

./: .gitignore  CMakeLists.txt  README.md  get_device_info.c  info.txt  main.c
c/: CMakeLists.txt
python/: requirements.txt  web.py
